--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "supertest": "^2.0.0"
   },
   "devDependencies": {
+    "gulp-concat": "^2.6.0",
     "mocha": "^2.5.3"
   },
   "scripts": {
